--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
